modifcation css des articles

--- a/sass/site/cours/_liste-cours.scss
+++ b/sass/site/cours/_liste-cours.scss
@@ -1,5 +1,14 @@
 
 
+
+.category-cours p{
+    color: palevioletred;
+}
+
+.category-cours h1{
+    color: palegreen;
+}
+
 #liste-cours {
       margin-bottom:0 ;
 }
