--- a/style.css
+++ b/style.css
@@ -689,6 +689,14 @@ body.page .main-navigation {
 /*--------------------------------------------------------------
 ## cours
 --------------------------------------------------------------*/
+.category-cours p {
+  color: palevioletred;
+}
+
+.category-cours h1 {
+  color: palegreen;
+}
+
 #liste-cours {
   margin-bottom: 0;
 }
@@ -779,8 +787,73 @@ body.page .main-navigation {
   font-size: .4em;
 }
 
+body {
+  background-color: #002437;
+  color: aliceblue;
+}
+
+#masthead {
+  background-color: aliceblue;
+}
+
 .entry .entry-content .has-large-font-size {
   font-size: 1em;
+}
+
+/* modification css des categories nouvelles et evenements */
+.wp-block-image, .wp-block-media-text__media {
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.wp-block-image a {
+  color: papayawhip;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.wp-block-media-text__media a {
+  color: peachpuff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.wp-block-media-text__media a:hover {
+  color: palevioletred;
+}
+
+.wp-block-image a:hover {
+  color: palevioletred;
+}
+
+.entry .entry-content a {
+  text-decoration: none;
+}
+
+element.style {
+  background-color: palevioletred;
+}
+
+/* affichage d'un article */
+.wp-block-media-text.alignwide {
+  border-top: solid 1px white;
+  padding: 5px 50px 0px 50px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.wp-block-media-text.alignwide:hover {
+  border: none;
+  border-left: solid 1px white;
+  padding: 5px 50px 0px 50px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* category-evenement */
+.category-evenement h1 {
+  color: plum;
+}
+
+/* category-nouvelle */
+.category-nouvelle h1 {
+  color: palegoldenrod;
 }
 
 @-webkit-keyframes anim1 {
