--- a/sass/site/cours/_liste-cours.scss
+++ b/sass/site/cours/_liste-cours.scss
@@ -20,8 +20,7 @@
     margin: 2% 2% 0% 15%;
     font-size : 1.5em;
   
-    //.domaine-1 { background-color: paleturquoise; color : #fff; }
-    .domaine-1 { background-color: rgb(255, 238, 0); color : #fff; }
+    .domaine-1 { background-color: paleturquoise; color : #fff; }
     .domaine-2 { background-color: palegreen; color : #aaa;}
     .domaine-3 { background-color: palegoldenrod; color : #fff;}
     .domaine-4 { background-color: palevioletred; color : #fff;}
@@ -64,10 +63,5 @@
             font-size: .4em;
         }
     }
-
-
-
-
-
 
 }
