--- a/style.css
+++ b/style.css
@@ -596,6 +596,14 @@ body.page .main-navigation {
   }
 }
 
+.menu-item {
+  color: cadetblue;
+}
+
+.menu-item:hover {
+  color: purple;
+}
+
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
@@ -625,7 +633,7 @@ body.page .main-navigation {
   padding: 4px;
 }
 
-.site-header.featured-image .site-branding .site-description {
+.site-header.featured-image .site-branding .site-description, .site-header.featured-image .site-branding .menu-item, .site-header.featured-image .site-branding .category-evenement h1, .category-evenement .site-header.featured-image .site-branding h1, .site-header.featured-image .site-branding .category-nouvelle h1, .category-nouvelle .site-header.featured-image .site-branding h1 {
   font-size: 5vw;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
@@ -668,7 +676,7 @@ body.page .main-navigation {
   .site-header.featured-image .site-branding .site-title {
     font-size: 4vw;
   }
-  .site-header.featured-image .site-branding .site-description {
+  .site-header.featured-image .site-branding .site-description, .site-header.featured-image .site-branding .menu-item, .site-header.featured-image .site-branding .category-evenement h1, .category-evenement .site-header.featured-image .site-branding h1, .site-header.featured-image .site-branding .category-nouvelle h1, .category-nouvelle .site-header.featured-image .site-branding h1 {
     font-size: 3vw;
   }
 }
@@ -681,7 +689,7 @@ body.page .main-navigation {
   .site-header.featured-image .site-branding .site-title {
     font-size: 5vw;
   }
-  .site-header.featured-image .site-branding .site-description {
+  .site-header.featured-image .site-branding .site-description, .site-header.featured-image .site-branding .menu-item, .site-header.featured-image .site-branding .category-evenement h1, .category-evenement .site-header.featured-image .site-branding h1, .site-header.featured-image .site-branding .category-nouvelle h1, .category-nouvelle .site-header.featured-image .site-branding h1 {
     font-size: 4vw;
   }
 }
@@ -790,6 +798,10 @@ body.page .main-navigation {
 body {
   background-color: #002437;
   color: aliceblue;
+}
+
+.site-description, .menu-item, .category-evenement h1, .category-nouvelle h1 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #masthead {
