--- a/sass/site/cours/_liste-cours.scss
+++ b/sass/site/cours/_liste-cours.scss
@@ -1,8 +1,7 @@
 
-
-
 .category-cours p{
     color: palevioletred;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .category-cours h1{
