changmeent couleurs total

--- a/sass/site/accueil/_accueil.scss
+++ b/sass/site/accueil/_accueil.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: #002437;
+    background-color: #d0eeff;
     color: aliceblue;
 }
 
@@ -22,22 +22,22 @@ body{
 
 
 .wp-block-image a{
-    color: papayawhip;
+    color: rgb(84, 16, 124);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  }
 
  .wp-block-media-text__media a{
-    color: peachpuff;
+    color: rgb(60, 11, 75);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  }
 
  .wp-block-media-text__media a:hover{
-    color: palevioletred;
+    color: rgb(255, 0, 85);
  }
  
 
 .wp-block-image a:hover{
-   color: palevioletred;
+   color: rgb(255, 0, 85);
 }
 
 .entry .entry-content a {
